// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`immutableJS can denormalize already partially denormalized data 1`] = `
Menu {
  "food": Food {
    "id": "1",
  },
  "id": "1",
}
`;

exports[`immutableJS denormalizes deep entities with records 1`] = `
Menu {
  "__ownerID": undefined,
  "_values": Immutable.List [
    "1",
    "1",
  ],
  "food": Food {
    "id": "",
  },
  "id": "",
}
`;

exports[`immutableJS denormalizes deep entities with records 2`] = `
Menu {
  "__ownerID": undefined,
  "_values": Immutable.List [
    "2",
    undefined,
  ],
  "food": Food {
    "id": "",
  },
  "id": "",
}
`;
